Fix f.a.q. ultima pregunta no visible

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -463,7 +463,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 120%;
   width: 100%;
   margin-top: 39px;
   z-index: 1;
@@ -475,7 +475,7 @@
   justify-content: flex-start;
   align-items: center;
   background-color: var(--grey);
-  height: 100%;
+  height: 672px;
   width: 100%;
 }
 
